# oxidizer

./: .cvsignore  .gitignore  BreedingController.h  BreedingController.m  Credits.html  DnDArrayController.h  DnDArrayController.m  DnDButton.h  DnDButton.m  DnDImageView.h  DnDImageView.m  DragDropAndSaveImageView.m  EnvironmentController.h  EnvironmentController.m  Flam3Task.h  Flam3Task.m  FlameController.h  FlameController.m  FractalFlameModel.h  FractalFlameModel.m  GenePoolController.h  GenePoolController.m  GenePoolModel.h  GenePoolModel.m  Genome.h  Genome.m  GenomeManagedObject.h  GenomeManagedObject.m  GreaterThanThreeTransformer.h  GreaterThanThreeTransformer.m  ImageFormatIsJPEG.h  ImageFormatIsJPEG.m  ImageFormatIsPNG.h  ImageFormatIsPNG.m  Info.plist  LuaConsole.xib  NOTE.txt  NSProgressIndicatorUpdateOnMainThread.h  NSProgressIndicatorUpdateOnMainThread.m  OxidizerDelegate.h  (+34 more)
Clipboard/: Clipboard.xib  ClipboardController.h  ClipboardController.m
Configs/: Oxidizer-10.5-All.xcconfig  Oxidizer-10.5-Debug.xcconfig  Oxidizer-10.5-Release.xcconfig  Oxidizer-10.5-StaticAnalyzer.xcconfig  Oxidizer-10.6-All.xcconfig  Oxidizer-10.6-Debug.xcconfig  Oxidizer-10.6-Release.xcconfig  Oxidizer-10.6-StaticAnalyzer.xcconfig  Oxidizer-All.xcconfig  Oxidizer-Base.xcconfig  autorevision.sh  flam3-All.xcconfig  flam3-Debug.xcconfig  flam3-Release.xcconfig  flam3-animate-All.xcconfig  flam3-animate-Debug.xcconfig  flam3-animate-Release.xcconfig  flam3-convert-All.xcconfig  flam3-convert-Debug.xcconfig  flam3-convert-Release.xcconfig  flam3-genome-All.xcconfig  flam3-genome-Debug.xcconfig  flam3-genome-Release.xcconfig  flam3-render-All.xcconfig  flam3-render-Debug.xcconfig  flam3-render-Release.xcconfig
Controls/: AutoPreviewSlider.h  AutoPreviewSlider.m  AutoPreviewStepper.h  AutoPreviewStepper.m  GradientSlider.h  GradientSlider.m  MultiUseWindow.h  MultiUseWindow.m  QuickViewButton.h  QuickViewButton.m  (+2 more)
flam3/: Makefile  Makefile.am  Makefile.in  README.txt  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  docstring.c  flam3-animate.c  flam3-convert.c  flam3-genome.c  flam3-palettes.c  flam3-render.c  flam3.c  flam3.h  flam3.pc  flam3.pc.in  img.h  isaac.c  isaac.h  isaacs.h  jpeg.c  mkinstalldirs  png.c  private.h  rect.c
(+367 files in other folders)
