dnl $Id: configure.in,v 1.4 2007/10/27 15:39:27 vargol Exp $
dnl Process this file with autoconf to produce a configure script.

AC_INIT(flam3-animate.c)
AM_CONFIG_HEADER(config.h)
AC_ARG_ENABLE(pthread, [  --enable-pthread       compile flam3 with threads enabled (enabled by default)])
AM_INIT_AUTOMAKE(flam3,"2.7.6")
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_HEADER_STDC
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME
AC_CHECK_LIB([z],[deflateInit_],,[AC_MSG_ERROR([zlib is required.])])
AC_CHECK_LIB([png],[png_write_image],,[AC_MSG_ERROR([The png library is required.])])
AC_CHECK_LIB([xml2],[xmlParseFile],,[AC_MSG_ERROR([The xml2 library is required.])])

if test "${enable_pthread}" = "" ; then
  enable_pthread=yes
fi

if test "${enable_pthread}" = "yes" ; then
  AC_CHECK_LIB([pthread],[pthread_create],,[AC_MSG_WARN([Pthread library not found - threads disabled.])])
fi
AC_CHECK_LIB([jpeg],[jpeg_start_compress],,[AC_MSG_ERROR([The jpeg library is required.])])
AC_PATH_PROG(XML2_CONFIG,xml2-config, no, $PATH:/bin:/usr/bin:/usr/local/bin)

if test "$XML2_CONFIG" != "no"
then
   CPPFLAGS="`$XML2_CONFIG --cflags` $CPPFLAGS"
fi

AC_OUTPUT([
Makefile
flam3.pc
])
